# ngehtutil

./: LICENSE  MANIFEST.in  README.md  __init__.py  pyproject.toml  setup.py  tbump.toml
.github/workflows/: main.yml  publish-to-pypi.yml
examples/: cost_example.py  cost_example2.py  cost_example3.py  sitemap.py
examples/antenna/: antenna.py  data_100e6.xls
ngehtutil/: __init__.py  array.py  campaign.py  foo.py  program.py  source.py  station.py  station_weather.py  target.py
ngehtutil/array/: arrays.py
ngehtutil/arraymodel/: __init__.py  station.py
ngehtutil/arraymodel/config/: Telescope_Site_Matrix_20220126.xlsx  arrays.csv
ngehtutil/campaign/: __init__.py  campaign.py
ngehtutil/config/: Telescope_Site_Matrix_20220218.xlsx  arrays.csv  telescope_sites.xlsx
ngehtutil/cost/: .gitignore  README.md  __init__.py  cost_config.py  cost_constants.xlsx  cost_model.py  cost_timing.py
ngehtutil/costmodel/: README.md  cost_config.py  cost_constants.xlsx  cost_timing.py  requirements.txt
ngehtutil/costmodel/examples/: array_setup.xlsx  site_info.xlsx
ngehtutil/source/: __init__.py  sources.py
ngehtutil/source/models/: MADa+0.94inc17rhigh20freq229.1.fits
ngehtutil/sourcemodel/: README.md
ngehtutil/sourcemodel/models/: MADa+0.94inc17rhigh20freq347.6.fits
ngehtutil/station/: README.md  __init__.py  array.py  arrays.py  station.py
ngehtutil/targetmodel/: __init__.py  targets.py
tests/: test_array.py  test_arrays.py  test_costs.py  test_program.py  test_sources.py  test_stations.py  test_targets.py  test_weather.py
(+1 files in other folders)
